force-app/main/default/objects/Creditsafe_Company__c/Creditsafe_Company__c.object-meta.xml
<CustomObject>
    <description>Basic information about a company.</description>
    <label>Creditsafe Company</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Creditsafe Company</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creditsafe Companies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>