force-app/main/default/objects/Creditsafe_Company__c/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <description>Type of company</description>
    <label>Company Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>