force-app/main/default/objects/Creditsafe_Company__c/fields/Creditsafe_Number__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Number__c</fullName>
    <description>CreditSafe number</description>
    <label>Creditsafe Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>