force-app/main/default/objects/Creditsafe_Company__c/fields/Date_Last_Change__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Change__c</fullName>
    <description>Date of last change</description>
    <label>Date Last Change</label>
    <type>Date</type>
</CustomField>