force-app/main/default/objects/Creditsafe_Company__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Company name.</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>