force-app/main/default/objects/Creditsafe_Company__c/fields/Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number__c</fullName>
    <description>Company registration number according to country’s Chambre of Commerce, optional.</description>
    <externalId>true</externalId>
    <label>Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>