force-app/main/default/objects/Creditsafe_Company__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Company status information (Active, Closed etc.), optional.</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>