force-app/main/default/objects/Creditsafe_Company__c/fields/Trade_Names__c.field-meta.xml
<CustomField>
    <fullName>Trade_Names__c</fullName>
    <description>Trading names.</description>
    <label>Trade Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>