force-app/main/default/objects/Creditsafe_Company__c/fields/VAT_Numbers__c.field-meta.xml
<CustomField>
    <fullName>VAT_Numbers__c</fullName>
    <description>VAT Numbers.</description>
    <label>VAT Numbers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>