force-app/main/default/objects/Creditsafe_Company__c/recordTypes/Affiliated_Companies.recordType-meta.xml
<RecordType>
    <fullName>Affiliated_Companies</fullName>
    <active>true</active>
    <label>Affiliated Companies</label>
</RecordType>