force-app/main/default/objects/Creditsafe_Company__c/recordTypes/Immediate_Parent.recordType-meta.xml
<RecordType>
    <fullName>Immediate_Parent</fullName>
    <active>true</active>
    <label>Immediate Parent</label>
</RecordType>