force-app/main/default/objects/Creditsafe_Company__c/recordTypes/Subsidiary_Companies.recordType-meta.xml
<RecordType>
    <fullName>Subsidiary_Companies</fullName>
    <active>true</active>
    <label>Subsidiary Companies</label>
</RecordType>