force-app/main/default/objects/Creditsafe_Company__c/recordTypes/Ultimate_Parent.recordType-meta.xml
<RecordType>
    <fullName>Ultimate_Parent</fullName>
    <active>true</active>
    <label>Ultimate Parent</label>
</RecordType>